# ascend-agent

./: .gitignore  README.md  pyproject.toml
.opencode/: gsd-file-manifest.json  gsd-install-state.json  opencode.json
.opencode/agents/: gsd-ai-researcher.md  gsd-code-fixer.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.opencode/command/: gsd-add-tests.md  gsd-ai-integration-phase.md  gsd-audit-fix.md  gsd-audit-milestone.md  gsd-audit-uat.md  gsd-autonomous.md  gsd-capture.md  gsd-cleanup.md  gsd-code-review.md  gsd-complete-milestone.md  gsd-config.md  gsd-debug.md  gsd-discuss-phase.md  gsd-docs-update.md  gsd-eval-review.md  gsd-execute-phase.md  gsd-explore.md  gsd-extract-learnings.md  gsd-fast.md  gsd-forensics.md  gsd-graphify.md  gsd-health.md  gsd-help.md  gsd-import.md  gsd-inbox.md  gsd-ingest-docs.md  gsd-manager.md  gsd-map-codebase.md  gsd-milestone-summary.md  gsd-mvp-phase.md  gsd-new-milestone.md  gsd-new-project.md  gsd-ns-context.md  gsd-ns-manage.md  gsd-ns-review.md  gsd-ns-workflow.md  gsd-pause-work.md  gsd-phase.md  gsd-plan-phase.md  gsd-plan-review-convergence.md  (+25 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
tests/: conftest.py  test_cli.py  test_context.py  test_context_trace_regressions.py
(+213 files in other folders)
