[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ascend-agent"
version = "0.1.0"
description = "Ascend Diagnostic Agent — diagnose, reproduce, and fix Ascend NPU issues"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.1",
    "openai>=2.37.0",
    "typer>=0.25.0",
    "rich>=15.0.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "asyncssh>=2.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
ascend-agent = "ascend_agent.main:app"

[project.urls]
Homepage = "https://github.com/ascend/ascend-agent"
Repository = "https://github.com/ascend/ascend-agent.git"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
